# cuda-gpu-cmake

./: CMakeLists.txt  README.md  life_game_template.cu  reverseArray_reseni.cu
exercise05/: exercise05.cu
